fixing modal windows, navigation to newly created group, and panel button spacing

--- a/frontend/src/css/forms.css
+++ b/frontend/src/css/forms.css
@@ -40,3 +40,8 @@
 .circle-container{
     border-radius: 50%;
 }
+
+.btn.small {
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
