--- a/frontend/src/css/modal.css
+++ b/frontend/src/css/modal.css
@@ -11,7 +11,6 @@
     position: fixed;
     top: 45vh;
     left: 50vw;
-    /* margin-right: -50%; */
     transform: translate(-50%, -50%);
 }
 
@@ -21,8 +20,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    backdrop-filter: blur(5px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: rgba(0,0,0,.5);
+    backdrop-filter: blur(2px);
+    z-index: 10;
 }
